# Training_Neural_Networks_in_CPP

./: .gitignore  CMakeLists.txt  README.md
src/: NeuralNetworks.cpp
src/02_04b/: MLP.cpp
src/02_05/: MLP.cpp
src/Archive/: MLP.cpp  MLP.h  NeuralNetworkMaker.lib  NeuralNetworks
src/FollowAlong/: GPU_MLP.cpp  GPU_MLP.h  MLP.cpp  MLP.h  NeuralNetworks  NeuralNetworks.cpp
src/NeuralNetworks/: GPU_MLP.cpp  GPU_MLP.h  Perceptron.cpp  Perceptron.h
src/log/: log.cpp  log.h
